--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header class="header">
+      <h1 class="header__title">TEST-SITE</h1>
       <nav class="header__nav">
         <ul class="header__navList">
           <li class="header__navItem"><a href="#">HOME</a></li>
@@ -21,12 +22,14 @@
           <li class="header__navItem"><a href="#">Scroll action</a></li>
         </ul>
       </nav>
-      <div class="header__navBtn" id="js-hamburger">
-        <span class="header__navBtnLine"></span>
-        <span class="header__navBtnLine"></span>
-        <span class="header__navBtnLine"></span>
+      <div class="header__navBg"></div>
+      <div class="header__navBtnWrapper"  id="js-hamburger">
+        <div class="header__navBtn">
+          <span class="header__navBtnLine"></span>
+          <span class="header__navBtnLine"></span>
+          <span class="header__navBtnLine"></span>
+        </div> 
       </div>
-      <div class="black-bg" id="js-black-bg"></div>
     </header>
 
     <main>
