dropdownのjquery、js実装手前

--- a/index.html
+++ b/index.html
@@ -31,17 +31,16 @@
         </div> 
       </div>
     </header>
-
+    
     <main>
       <div class="mainVisual">
         <p>Practice</p>
       </div>
-
       <section class="section">
         <div class="section__inner">
           <div class="section__title">Modal</div>
           <div class="section__detail">
-            <!-- モーダル -->
+            <!-- Modal -->
             <div class="modalBox">
               <div class="modalBox__btn" id="js-open">詳細を見る</div>
               <div class="modalBox__mask is-hidden" id="js-mask"></div>
@@ -50,7 +49,37 @@
                   <div class="modalBox__modalCloseBtn" id="js-close">閉じる</div>
               </div>
             </div>
-            <!-- /モーダル -->
+            <!-- /Modal -->
+          </div>
+        </div>
+      </section>
+      
+      <section class="section">
+        <div class="section__inner">
+          <div class="section__title">Dropdown Menu</div>
+          <div class="section__detail">
+            <!-- Dropdown Menu -->
+            <div class="dropdownMenu">
+              <ul class="dropdownMenu__list">
+                <li class="dropdownMenu__listTilte">Blog
+                  <ul class="dropdownMenu__listItem">
+                    <li><a href="#">Blog1</a></li>
+                    <li><a href="#">Blog2</a></li>
+                    <li><a href="#">Blog3</a></li>
+                    <li><a href="#">Blog4</a></li>
+                  </ul>
+                </li>
+                <li class="dropdownMenu__listTilte">Service
+                  <ul class="dropdownMenu__listItem">
+                    <li><a href="#">Service1</a></li>
+                    <li><a href="#">Service2</a></li> 
+                    <li><a href="#">Service3</a></li>
+                    <li><a href="#">Service4</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+            <!-- /Dropdown Menu -->
           </div>
         </div>
       </section>
