スムーススクロール実装

--- a/index.html
+++ b/index.html
@@ -83,9 +83,24 @@
           </div>
         </div>
       </section>
+
+      <section class="section">
+        <div class="section__inner">
+          <div class="section__title">Smooth scroll</div>
+          <div class="section__detail">
+            <!-- Smooth scroll -->
+            <div class="smoothScrollWrapper">
+              <div class="smoothScroll" id="smoothScroll">クリックでページトップへ</div>
+            </div>
+            <!-- /Smooth scroll -->
+          </div>
+        </div>
+      </section>
+
     </main>
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/modal.js"></script>
+    <script type="text/javascript" src="js/smooth-scroll.js"></script>
   </body>
 </html>
