ドロップダウンメニュー実装

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- Dropdown Menu -->
             <div class="dropdownMenu">
               <ul class="dropdownMenu__list">
-                <li class="dropdownMenu__listTilte">Blog
+                <li class="dropdownMenu__listItemWrap">Blog
                   <ul class="dropdownMenu__listItem">
                     <li><a href="#">Blog1</a></li>
                     <li><a href="#">Blog2</a></li>
@@ -69,7 +69,7 @@
                     <li><a href="#">Blog4</a></li>
                   </ul>
                 </li>
-                <li class="dropdownMenu__listTilte">Service
+                <li class="dropdownMenu__listItemWrap">Service
                   <ul class="dropdownMenu__listItem">
                     <li><a href="#">Service1</a></li>
                     <li><a href="#">Service2</a></li> 
@@ -102,5 +102,6 @@
     <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/modal.js"></script>
     <script type="text/javascript" src="js/smooth-scroll.js"></script>
+    <script type="text/javascript" src="js/dropdown.js"></script>
   </body>
 </html>
