--- a/index.html
+++ b/index.html
@@ -97,11 +97,41 @@
         </div>
       </section>
 
+      <section class="section">
+        <div class="section__inner">
+          <div class="section__title">Tab</div>
+          <div class="section__detail">
+            <!-- Tab -->
+            <div class="tab">
+              <ul class="tab__list">
+                <li class="is-active">Blog1</li>
+                <li>Blog2</li>
+                <li>Blog3</li>
+              </ul>
+              <div class="tab__Box is-active">
+                <p>Blog1</p>
+                <p>今週は、東京へ行ってきました。</p>
+              </div>
+              <div class="tab__Box">
+                <p>Blog２</p>
+                <p>今週は、大阪へ行ってきました。</p>
+              </div>
+              <div class="tab__Box">
+                <p>Blog３</p>
+                <p>今週は、名古屋へ行ってきました。</p>
+              </div>
+            </div>
+            <!-- /Tab -->
+          </div>
+        </div>
+      </section>
+
     </main>
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/modal.js"></script>
     <script type="text/javascript" src="js/smooth-scroll.js"></script>
     <script type="text/javascript" src="js/dropdown.js"></script>
+    <script type="text/javascript" src="js/tab.js"></script>
   </body>
 </html>
