jQueryカルーセル slickで実装

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>KANA MIYAMOTO TEST-SITE</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
+
   </head>
   <body>
     <header class="header">
@@ -126,6 +129,26 @@
         </div>
       </section>
 
+      <section class="section">
+        <div class="section__inner">
+          <div class="section__title">Tab</div>
+          <div class="section__detail">
+            <!-- Clusel -->
+            <div class="clusel">
+              <div class="clusel__slides">
+                <ul class="clusel__slidesList slider">
+                  <li><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+              </ul>
+              </div>
+            </div>
+            <!-- /Clusel -->
+          </div>
+        </div>
+      </section>
+
     </main>
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
@@ -133,5 +156,8 @@
     <script type="text/javascript" src="js/smooth-scroll.js"></script>
     <script type="text/javascript" src="js/dropdown.js"></script>
     <script type="text/javascript" src="js/tab.js"></script>
+    <script type="text/javascript" src="js/clusel.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script type="text/javascript" src="js/clusel-slick.js"></script>
   </body>
 </html>
